--- a/sass/_globals.scss
+++ b/sass/_globals.scss
@@ -1,72 +1,71 @@
 :root {
-    // Fonts
-    --bodyFont: 'Montserrat', sans-serif;
-    --headingFont: 'Roboto', sans-serif;
+  // Fonts
+  --bodyFont: 'Montserrat', sans-serif;
+  --headingFont: 'Roboto', sans-serif;
 
-    /* colors */
-    --primary-100: #e7d8f7;
-    --primary-200: #cfb2ef;
-    --primary-300: #b68be8;
-    --primary-400: #9e65e0;
-    --primary-500: #863ed8;
-    --primary-600: #6b32ad;
-    --primary-700: #6b32ad;
-    --primary-800: #502582;
-    --primary-900: #361956;
+  /* colors */
+  --primary-100: #e7d8f7;
+  --primary-200: #cfb2ef;
+  --primary-300: #b68be8;
+  --primary-400: #9e65e0;
+  --primary-500: #863ed8;
+  --primary-600: #6b32ad;
+  --primary-700: #6b32ad;
+  --primary-800: #502582;
+  --primary-900: #361956;
 
-    --secondary-400: #f96934;
-    --secondary-500: #f74301;
-    --secondary-600: #c63601;
+  --secondary-400: #f96934;
+  --secondary-500: #f74301;
+  --secondary-600: #c63601;
 
-    // Grey
-    --grey-50: #f8fafc;
-    --grey-100: #f1f5f9;
-    --grey-200: #e2e8f0;
-    --grey-300: #cbd5e1;
-    --grey-400: #94a3b8;
-    --grey-500: #64748b;
-    --grey-600: #475569;
-    --grey-700: #334155;
-    --grey-800: #1e293b;
-    --grey-900: #0f172a;
- 
-    /* rest of the vars */
-    --backgroundColor: var(--grey-50);
-    --textColor: var(--grey-900);
-    --borderRadius: 0.25rem;
-    --letterSpacing: 1px;
-    --transition: 0.3s ease-in-out all;
-    --max-width: 1120px;
-    --fixed-width: 600px;
+  // Grey
+  --grey-50: #f8fafc;
+  --grey-100: #f1f5f9;
+  --grey-200: #e2e8f0;
+  --grey-300: #cbd5e1;
+  --grey-400: #94a3b8;
+  --grey-500: #64748b;
+  --grey-600: #475569;
+  --grey-700: #334155;
+  --grey-800: #1e293b;
+  --grey-900: #0f172a;
 
-    /* box shadow*/
-    --shadow-1: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-    --shadow-2: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-        0 2px 4px -1px rgba(0, 0, 0, 0.06);
-    --shadow-3: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
-        0 4px 6px -2px rgba(0, 0, 0, 0.05);
-    --shadow-4: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
-        0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  /* rest of the vars */
+  --backgroundColor: var(--grey-50);
+  --textColor: var(--grey-900);
+  --borderRadius: 0.25rem;
+  --letterSpacing: 1px;
+  --transition: 0.3s ease-in-out all;
+  --max-width: 1120px;
+  --fixed-width: 600px;
+
+  /* box shadow*/
+  --shadow-1: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  --shadow-2: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  --shadow-3: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  --shadow-4: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
+    0 10px 10px -5px rgba(0, 0, 0, 0.04);
 }
 
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 body {
-    background: var(--backgroundColor);
-    font-family: var(--bodyFont);
-    font-size: 1.6rem;
-    font-weight: 400;
-    line-height: 1.75;
-    color: var(--textColor);
+  background: var(--backgroundColor);
+  font-family: var(--bodyFont);
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.75;
+  color: var(--textColor);
 }
 
 h1,
@@ -75,79 +74,117 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: var(--headingFont);
+  font-family: var(--headingFont);
 }
 
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
-
 
 // UTILITIES
 .container {
-    max-width: 112rem;
-    width: 100%;
-    margin: 0 auto;
-    padding: 0 2rem;
-    overflow: hidden;
+  max-width: 112rem;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 3rem;
+  overflow: hidden;
 
-    @media screen and (min-width:1200px) {
-        overflow: visible;
-    }
+  @media screen and (min-width: 768px) {
+    padding: 0 5rem;
+  }
+
+  @media screen and (min-width: 1200px) {
+    overflow: visible;
+  }
 }
 
 .btn {
-    display: inline-block;
-    padding: 1rem 2rem;
-    margin: 1rem;
-    letter-spacing: 1px;
-    font-weight: 700;
-    transition: .2s;
+  display: inline-block;
+  padding: 1rem 2rem;
+  margin: 1rem;
+  letter-spacing: 1px;
+  font-weight: 700;
+  transition: 0.2s;
 
-    &-primary {
-        background: rgb(54, 25, 86);
-        background: linear-gradient(117deg, rgba(54, 25, 86, 1) 0%, rgba(80, 37, 130, 1) 50%, rgba(107, 50, 173, 1) 100%);
-        color: var(--grey-100);
-        border: 2px solid transparent;
+  &-primary {
+    background: rgb(54, 25, 86);
+    background: linear-gradient(
+      117deg,
+      rgba(54, 25, 86, 1) 0%,
+      rgba(80, 37, 130, 1) 50%,
+      rgba(107, 50, 173, 1) 100%
+    );
+    color: var(--grey-100);
+    border: 2px solid transparent;
+  }
+
+  &-secondary {
+    background: rgb(198, 54, 1);
+    background: linear-gradient(
+      117deg,
+      rgba(198, 54, 1, 1) 0%,
+      rgba(247, 67, 1, 1) 50%,
+      rgba(249, 105, 52, 1) 100%
+    );
+    color: var(--grey-100);
+    border: 2px solid var(--secondary-400);
+
+    &:hover {
+      background: rgb(249, 105, 52);
+      background: linear-gradient(
+        117deg,
+        rgba(249, 105, 52, 1) 0%,
+        rgba(247, 67, 1, 1) 50%,
+        rgba(198, 54, 1, 1) 100%
+      );
     }
+  }
 
-    &-secondary {
-        background: rgb(198, 54, 1);
-        background: linear-gradient(117deg, rgba(198, 54, 1, 1) 0%, rgba(247, 67, 1, 1) 50%, rgba(249, 105, 52, 1) 100%);
-        color: var(--grey-100);
-        border: 2px solid var(--secondary-400);
+  &-outline {
+    color: var(--primary-500);
+    border: 2px solid var(--primary-500);
 
-        &:hover {
-            background: rgb(249, 105, 52);
-            background: linear-gradient(117deg, rgba(249, 105, 52, 1) 0%, rgba(247, 67, 1, 1) 50%, rgba(198, 54, 1, 1) 100%);
-        }
+    &:hover {
+      background: rgb(54, 25, 86);
+      background: linear-gradient(
+        117deg,
+        rgba(54, 25, 86, 1) 0%,
+        rgba(80, 37, 130, 1) 50%,
+        rgba(107, 50, 173, 1) 100%
+      );
+      color: var(--grey-100);
     }
-
-    &-outline {
-        color: var(--primary-500);
-        border: 2px solid var(--primary-500);
-
-        &:hover {
-            background: rgb(54, 25, 86);
-            background: linear-gradient(117deg, rgba(54, 25, 86, 1) 0%, rgba(80, 37, 130, 1) 50%, rgba(107, 50, 173, 1) 100%);
-            color: var(--grey-100);
-        }
-    }
+  }
 }
 
+.text-center {
+  text-align: center;
+}
+
+.mb-xs {
+  margin-bottom: 1.5rem;
+}
+
+.mb-sm {
+  margin-bottom: 3rem;
+}
 
 .section-title {
-    font-size: 3.7rem;
-    font-family: var(--bodyFont);
-    font-weight: 700;
-    text-align: center;
+  font-size: 3.7rem;
+  font-family: var(--bodyFont);
+  font-weight: 700;
+  text-align: center;
 
-    background-image: linear-gradient(to right, var(--primary-700), var(--primary-900));
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+  background-image: linear-gradient(
+    to right,
+    var(--primary-700),
+    var(--primary-900)
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
