--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,3 +3,49 @@
 @use 'navbar';
 @use 'hero';
 @use 'services';
+
+// About Us
+.about {
+  p {
+    margin-bottom: 2rem;
+  }
+
+  img {
+    width: 100%;
+    height: auto;
+    box-shadow: var(--shadow-3);
+  }
+
+  &-wrap {
+    @media screen and (min-width: 768px) {
+      display: grid;
+      gap: 5rem;
+      grid-template-columns: 50% 50%;
+      place-items: center;
+    }
+  }
+
+  .kudos {
+    margin-top: 5rem;
+    @media screen and (min-width: 768px) {
+      grid-column: 1/3;
+      grid-row: 2/3;
+      ul {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 3rem;
+      }
+    }
+  }
+}
+
+.testimonials {
+  //   ul {
+  //     @media screen and (min-width: 768px) {
+  //       display: grid;
+  //       gap: 1rem;
+  //       grid-template-columns: repeat(2, 1fr);
+  //       place-items: center;
+  //     }
+  //   }
+}
