--- a/sass/main.scss
+++ b/sass/main.scss
@@ -39,13 +39,37 @@
   }
 }
 
-.testimonials {
-  //   ul {
-  //     @media screen and (min-width: 768px) {
-  //       display: grid;
-  //       gap: 1rem;
-  //       grid-template-columns: repeat(2, 1fr);
-  //       place-items: center;
-  //     }
-  //   }
+.companies {
+  background-color: #fff;
+  padding: 5rem 0;
+  ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+
+    li {
+      @media screen and (min-width: 768px) {
+        flex: 0 0 calc(15% - 1rem);
+      }
+    }
+
+    img {
+      //   width: 100%;
+      max-width: 25rem;
+      filter: grayscale(0.9);
+      transition: 0.2s;
+
+      @media screen and (min-width: 768px) {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        display: block;
+      }
+
+      &:hover {
+        filter: grayscale(0);
+      }
+    }
+  }
 }
