--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,75 +1,9 @@
-@use 'globals';
+@use './vendor/glightbox';
 
+@use 'globals';
 @use 'navbar';
 @use 'hero';
 @use 'services';
-
-// About Us
-.about {
-  p {
-    margin-bottom: 2rem;
-  }
-
-  img {
-    width: 100%;
-    height: auto;
-    box-shadow: var(--shadow-3);
-  }
-
-  &-wrap {
-    @media screen and (min-width: 768px) {
-      display: grid;
-      gap: 5rem;
-      grid-template-columns: 50% 50%;
-      place-items: center;
-    }
-  }
-
-  .kudos {
-    margin-top: 5rem;
-    @media screen and (min-width: 768px) {
-      grid-column: 1/3;
-      grid-row: 2/3;
-      ul {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 3rem;
-      }
-    }
-  }
-}
-
-.companies {
-  background-color: #fff;
-  padding: 5rem 0;
-  ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-
-    li {
-      @media screen and (min-width: 768px) {
-        flex: 0 0 calc(15% - 1rem);
-      }
-    }
-
-    img {
-      //   width: 100%;
-      max-width: 25rem;
-      filter: grayscale(0.9);
-      transition: 0.2s;
-
-      @media screen and (min-width: 768px) {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        display: block;
-      }
-
-      &:hover {
-        filter: grayscale(0);
-      }
-    }
-  }
-}
+@use 'about';
+@use 'companies';
+@use 'portfolio';
