--- a/sass/_portfolio.scss
+++ b/sass/_portfolio.scss
@@ -3,10 +3,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    gap: 2rem;
-
+    row-gap: 1.5rem;
     li {
-      width: calc(33.33% - 2rem);
+      width: calc(33.33% - 0.8rem);
+      height: 23rem;
       overflow: hidden;
       box-shadow: var(--shadow-4);
       border-radius: 3px;
@@ -16,8 +16,9 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      object-position: top left;
       display: block;
-      transform: scale(1.1);
+      transform: scale(1.01);
       filter: blur(0);
       transition: 0.1s;
 
