--- a/sass/main.scss
+++ b/sass/main.scss
@@ -92,3 +92,14 @@
     }
   }
 }
+
+// CONTACT
+.contact {
+  background: rgb(54, 25, 86);
+  background: linear-gradient(
+    117deg,
+    rgba(54, 25, 86, 1) 0%,
+    rgba(80, 37, 130, 1) 50%,
+    rgba(107, 50, 173, 1) 100%
+  );
+}
