added screen reader text

--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -126,3 +126,12 @@
   text-align: center;
   color: var(--grey-100);
 }
+
+.screen-reader-only {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
